--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="col-md-3 col-12 p-0 from-input">
         <span> <i class="fas fa-bus-alt me-2"></i></span>
         <label id="fromplace">To</label><br>
-        <input type="text" class="form-control px-5 border-0" name="fromplace">
+        <input type="text" class="form-control px-5" name="fromplace">
       </div>
 
       <div class="swap-icon col-md-1 text-center">
@@ -115,13 +115,13 @@
       <div class="col-md-3 col-12 p-0 ">
         <span> <i class="fas fa-bus-alt me-2"></i></span>
         <label id="toplace">From</label><br>
-        <input type="text" class="form-control border-0" name="toplace">
+        <input type="text" class="form-control " name="toplace">
       </div>
 
       <div class="col-md-3 col-12 p-0">
         <i class="far fa-calendar-alt me-2"></i>
         <label id="date-in">Date</label><br>
-        <input type="date" name="date-in" class="form-control border-0">
+        <input type="date" name="date-in" class="form-control border-0 ">
       </div>
       <div class="col-md-2 col-12 p-0">
         <button type="button" class="btn btn-danger">SEARCH BUSES</button>
@@ -347,119 +347,7 @@
   </div>
 </section>
 
-<!--section3-->
-<section>
-  <div class="container">
-    <h2 class="text-black px-5 py-2 pt-5">GOVERNMENT BUSES</h2>
-    <div class="m-5">
 
-
-      <div id="carouselExampleCaptions2" class="carousel carousel-dark slide" data-bs-ride="false">
-
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="card-group">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <div class="carousel-item">
-            <div class="card-group">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <div class="carousel-item">
-
-
-            <div class="card-group">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
-  </div>
-
-  </div>
-</section>
 
 <!--section4-->
 <section>
@@ -520,7 +408,7 @@
 </section>
 
 <!--section7-->
-<section>
+<section class="m-5">
   <div class="container">
     <h2 class="text-black px-5 py-2 pt-5">Global Presence</h2>
     <div >
@@ -554,7 +442,7 @@
 </section>
 
 <!--section8-->
-<section>
+<section class="m-5">
   <div class="container mt-4">
     <h2 class="mb-3">BOOK BUS TICKETS ONLINE</h2>
     <p>
@@ -570,7 +458,8 @@
   </div>
 </section>
 
-<section>
+<!--section-->
+<section class="m-5">
   <div class="container">
     <h2>Bus Booking redDeals on redBus</h2>
     <p>Don't miss out on these incredible offers, book your bus tickets now and travel with convenience and affordability. Hurry, grab the best bus booking deals before they're gone!</p>
@@ -578,14 +467,106 @@
     <div class="card">
 
       <div class="card-body">
-        <h5 class="card-title">Unlock Unbeatable Exclusive redDeals! <span class="display-1">20% OFF</span></h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Unlock Unbeatable Exclusive redDeals!<br> <span style="font-weight:bolder ">20% OFF</span></h5>
+        <p class="card-text">
+        <table class= "m-3" style="border: 1px solid red">
+        <tr>
+          <td class="p-3">854 Deals</td>
+          <td class="p-3">474 Bus Operators</td>
+          <td class="p-3">277279 Routes</td>
+        </tr>
+      </table></p>
+        <a href="#" class="btn btn-danger">Book Now</a>
       </div>
     </div>
 
   </div>
 </section>
+
+<!--footer-->
+<footer>
+
+  <footer class="bg-light text-dark pt-4 mt-5">
+    <div class="container ">
+      <div class="row ">
+        <!-- Left Section - Logo & About -->
+        <div class="col-md-4">
+          <img src="img/rdc-redbus-logo.svg" alt="redBus Logo" width="120"> <!-- Replace with actual logo -->
+          <p class="mt-2">
+            redBus is the world's largest online bus ticket booking service trusted by over 25 million happy customers globally. redBus offers bus ticket booking through its website, iOS, and Android mobile apps for all major routes.
+          </p>
+        </div>
+
+        <!-- Middle Sections - Quick Links -->
+        <div class="col-md-2">
+          <h5 class="fw-bold">About redBus</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-dark text-decoration-none">About us</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Investor Relations</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Contact us</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">redBus on mobile</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Sitemap</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Offers</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Careers</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Values</a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-2">
+          <h5 class="fw-bold">Info</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-dark text-decoration-none">T&C</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Privacy policy</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">FAQ</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Blog</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Bus operator registration</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Agent registration</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Insurance partner</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">User agreement</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Primo Bus</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Bus Timetable</a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-2">
+          <h5 class="fw-bold">Global Sites</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-dark text-decoration-none">India</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Singapore</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Malaysia</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Indonesia</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Peru</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Colombia</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Cambodia</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Vietnam</a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-2">
+          <h5 class="fw-bold">Our Partners</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-dark text-decoration-none">Goibibo Bus</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Goibibo Hotels</a></li>
+            <li><a href="#" class="text-dark text-decoration-none">Makemytrip Hotels</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Bottom Footer Section -->
+      <hr>
+      <div class="d-flex flex-column flex-md-row justify-content-between align-items-center pb-3">
+        <p class="mb-0">© 2025 Redbus India Pvt Ltd. All rights reserved</p>
+        <!-- Social Icons -->
+        <div>
+          <a href="#" class="text-dark me-3"><i class="fab fa-facebook fa-lg"></i></a>
+          <a href="#" class="text-dark me-3"><i class="fab fa-linkedin fa-lg"></i></a>
+          <a href="#" class="text-dark me-3"><i class="fab fa-twitter fa-lg"></i></a>
+          <a href="#" class="text-dark"><i class="fab fa-instagram fa-lg"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+</footer>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
 
